??-??-????:
	enhancement: add rsync options:
		"chmod",
		"chown",
		"copy_dirlinks",
		"existing",
		"omit_dir_times",
		"omit_dir_times"
		"omit_link_times",
	enhancement: settings{ } now checks for unknown entries and errors if so.
	change: Lsyncd now writes a startup log message before daemonizing
		does in case logging fails, it is recognized before it cannot
		message anything about it, since it deamonized
	change: compatible with Lua5.3 (along with 5.1 and 5.2)
	change: _verbatim forced for 'exitcodes' entry.
	change: manpage is not rebuild by default.
		it is provided precompiled.
	change:
		faulty/deprecated config files that use settings = { ... }, with equal sign
		are no longer worked around.
	change: default.direct now calls copy with -p
	fix: ']' is not escaped for rsync rules, since rsync only applies
	     doesn't applie pattern matching if no other pattern chars
		 are found.
	fix: Shell injection hole close for default.direct on mv commands. (Marcin Szewczyk)
	fix: Crash of default-direct when source doesn't exit (Michael Ploujnikov)

15-10-2015: 2.1.6
	enhancement: Lsyncd now locks its pidfile
	enhancement: added ssh.identifyFile and ssh.options options
	enhancement: added rsync inplace option
	fix: ignore blank lines and rsync commenits in exclude files (David Reiss)
	fix: don't tread exclude lines with embedded "+" chars as inclusions (David Reiss)
	fix: crash when debugging inotify (Michael Ploujnikov)
	fix: fixed Finished/Retrying error messages being swapped around (Jun Saito)
	fix: properly encapsulate filenames on ssh mv commands to avoid shell command injections.
	fix: postcmd example (Timo Teräs)
	change: closes also on INT signals
	change: now removes its pidfile on INT and TERM signals
	change: changed build system from autotools to cmake

07-06-2013: 2.1.5
	enhancement: Added rsync options: bwlimit, timeout
	fix: Specifying ssh port no longer overwrites the last rsync option
	fix: rsync option password_file is now accepted